# examination-timetabling

./: .gitignore  CITATION.cff  DEF.MD  LICENSE  README.md  bestExistingSolutions.json  log  preprocess.json  requirements.txt  setup.py  stuck.json  test  validation_logs
data/: D1-1-16.json  D1-1-17.json  best-existing-solutions.json  toy.json
examtt_toolbox-0.3.1/: LICENSE.md  PKG-INFO  README.md  setup.cfg
examtt_toolbox-0.3.1/toolbox/: __init__.py  instance_loader.py  instance_validator.py  minizinc.py  solution_loader.py  solution_validator.py
instances/: D1-1-16.json  D1-1-17.json  D1-2-16.json  D1-2-17.json  D1-3-16.json  D1-3-17.json  D1-3-18.json  D2-1-18.json  D2-2-18.json  D2-3-18.json  D3-1-16.json  D3-1-17.json  D3-1-18.json  D3-2-16.json  D3-2-17.json  D3-2-18.json  D3-3-16.json  D3-3-17.json  D3-3-18.json  D4-1-17.json  D4-1-18.json  D4-2-17.json  D4-2-18.json  D4-3-17.json  D4-3-18.json  D5-1-17.json  D5-1-18.json  D5-2-17.json  D5-2-18.json  D5-3-18.json  D6-1-16.json  D6-1-17.json  D6-1-18.json  D6-2-16.json  D6-2-17.json  D6-2-18.json  D6-3-16.json  D6-3-17.json  D7-1-17.json  D7-2-17.json  (+1 more)
modified_instances/: FIEK-D1-1-16.json  FIEK-D1-1-17.json  FIEK-D3-1-16.json  FIEK-D3-1-18.json  FIEK-D3-2-16.json  FIEK-D3-2-17.json  FIEK-D3-3-18.json  FIEK-D4-1-18.json  FIEK-D4-2-18.json  FIEK-D4-3-17.json  FIEK-D5-1-17.json  FIEK-D5-2-17.json  FIEK-D6-1-18.json  FIEK-D6-2-16.json  FIEK-D6-2-18.json  FIEK-D7-2-17.json
patat-3m-solutions/: SOLUTION-D1-1-16.json  SOLUTION-D1-1-17.json  SOLUTION-D1-2-16.json  SOLUTION-D1-2-17.json  SOLUTION-D1-3-16.json  (+36 more)
(+98 files in other folders)
