[metadata]
name = examtt_toolbox
version = attr: toolbox.VERSION
description = Examination Timetabling toolbox for validation and format translation
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = validator, translator
license = MIT

[options]
zip_safe = True
packages = find:
install_requires = 
	pyparsing
	click
	numpy
	pandas
python_requires = >=3.6

[options.extras_require]
color = coloredlogs

[options.entry_points]
console_scripts = 
	examtt_toolbox = toolbox:main

[egg_info]
tag_build = 
tag_date = 0

